--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,39 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /*background-color: rgb(250,250,250);*/
 }
 
 a {
   color: #00B7FF;
+}
+.carddemoBasicUsage .card-media {
+      background-color: #999999;
+}
+.navbar{
+  border-radius:0px;
+  background-color: #000;
+}
+.md-button{
+  background-color: #fff;
+}
+.tabsdemoDynamicHeight md-content {
+  background-color: transparent !important; }
+  .tabsdemoDynamicHeight md-content md-tabs {
+    background: #f6f6f6;
+    border: 1px solid #e1e1e1; }
+    .tabsdemoDynamicHeight md-content md-tabs md-tabs-wrapper {
+      background: white; }
+  .tabsdemoDynamicHeight md-content h1:first-child {
+    margin-top: 0; }
+
+.login_form{
+    padding:60px;
+    width:500px;
+    text-align: center;
+    margin: auto;
+    margin-top:100px;
+    background-color: rgb(250,250,250);
+}
+.login_form_wrap{
+  text-align: center;
 }
