--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en" >
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Angular Material style sheet -->
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/stylesheets/style.css" media="screen" title="no title" charset="utf-8">
+  <style>
+    .md-button{
+      background-color: #000;
+      font-size: 20px;
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Angular Material requires Angular.js Libraries -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/angular/angular.min.js"></script>
+  <script src="/angular/angular-animate.min.js"></script>
+  <script src="/angular/angular-route.min.js"></script>
+  <script src="/angular/angular-aria.min.js"></script>
+  <script src="/angular/angular-messages.min.js"></script>
+
+
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+
+
+
+    <div ng-cloak="" class="carddemoBasicUsage" ng-app="MyApp" >
+
+      <!--Naebar goes here -->
+        <nav class="navbar navbar-inverse" ng-controller = 'mainCtrl'>
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">OrphanageApp</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#/">Home <span class="sr-only">(current)</span></a></li>
+              <li><a href="#">About Us</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explorer <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#orphdet">Orphanage List</a></li>
+                  <li><a href="#childdet">Children List</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#payment">Payment</a></li>
+                  <li><a href="#feedback">Feedback</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+              <div class="input-group">
+                  <input type="text" placeholder="Search Text" class="form-control" ng-model="searchtext"/>
+                    <span ng-click="search()" class="input-group-addon">
+                        <i class="fa fa-search"></i>
+                    </span>
+              </div>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+             <md-button class="md-fab md-mini">
+                <a href="#login"><md-icon md-font-icon="fa fa-user" class="fa fa-user" aria-hidden="true" alt="magic wand"></md-icon></a>
+            </md-button>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+      <!-- Your application bootstrap  -->
+
+      <!--ng view is defined to make the application as single page application-->
+
+      <div class="ng-view"></div>
+
+  </div>
+
+</body>
+  <script type="text/javascript" src="/javascripts/routes/routes.js"></script>
+  <script type="text/javascript" src="/javascripts/controller/mainCtrl.js"></script>
+  <script type="text/javascript" src="/javascripts/controller/searchCtrl.js"></script>
+  <script type="text/javascript" src="/javascripts/controller/loginCtrl.js"></script>
+  <script type="text/javascript" src="/javascripts/controller/homeCtrl.js"></script>
 </html>
